# PasswordManager-C

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  clib.json  compile_commands.json  makefile  myprog  myprog_gui
.cache/clangd/index/: argon2.c.D452BBDAA7984345.idx  argon2.h.91E606CDA6E7CF60.idx  auth.c.A3BB166992F11AAD.idx  auth.h.959A1DAED12B6172.idx  blake2-impl.h.1C4EFBEC9F0F0D59.idx  blake2.h.80E70ACCBC83466F.idx  blake2b.c.A1DEC8F4E365F2F3.idx  blamka-round-opt.h.A7A6DA040D81020F.idx  core.c.4001805F37F54258.idx  core.h.8FAB639DDCAB210F.idx  crypto.c.A1D57B8EB8A9275D.idx  crypto.h.761C8DDC78CB97F0.idx  encoding.c.3A5418CC8B62E189.idx  encoding.h.883E767E8E6FC9D8.idx  gen.c.40E166F4601BE84E.idx  main.c.23DEA88AF2150451.idx  opt.c.721E6196919D79D2.idx  thread.c.9D97F50874649670.idx  thread.h.8EDBB9AD2A8BDE14.idx  vault.c.CB02E038F750C2D9.idx  vault.h.1BA75B885ECDDABB.idx
cli/: cli.c  main.c
cli/features/: authentication.c  cred_cli_init.c  password_handling.c
cli/include/: authentication.h  cred_cli.h  password_handling.h
gui/: entry.c
gui/features/: cred.c  credential_handling.c  view_vault.c
gui/include/: cred.h  credential_handling.h  login_window.h  main_window.h  signup_window.h  view_vault.h
gui/windows/: login_window.c  main_window.c  signup_window.c
include/: auth.h  crypto.h  misc.h  vault.h
src/: auth.c  crypto.c  misc.c  vault.c
src/auth/: login.c  signup.c
src/auth/include/: login.h  signup.h
src/crypto/: base64.c  encrypt.c  gen.c  hash.c
src/include/: crypto.h  misc.h  vault.h
src/init/: cred.c
src/misc/: debug.c  helper.c  wrapper.c
src/vault/: vault.c  vault_helper.c
(+8 files in other folders)
